add kafka to booking service
